--- a/Tuter/project.properties
+++ b/Tuter/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../../../../Programming/RoR/Tuter/mobile/google-play-services_lib
+android.library.reference.1=../../../../../Development/android-sdk-linux/extras/google/google_play_services/libproject/google-play-services_lib
 android.library=false
