--- a/Tuter/project.properties
+++ b/Tuter/project.properties
@@ -11,10 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-17
-<<<<<<< HEAD
-android.library.reference.1=../../../adt-bundle-windows-x86_64-20130219/sdk/extras/google/google_play_services/libproject/google-play-services_lib
-=======
+target=Google Inc.:Google APIs:17
 android.library.reference.1=../../../../../Development/android-sdk-linux/extras/google/google_play_services/libproject/google-play-services_lib
->>>>>>> 5c050fbd2e9950a9029aae1b9ebde7eba3460031
-android.library=false
